--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <jmh.version>1.14.1</jmh.version>
         <spark.version>2.2.0</spark.version>
-        <scala.version>2.11</scala.version>
+        <scala.version.major>2.11</scala.version.major>
+        <scala.version>${scala.version.major}.12</scala.version>
     </properties>
 
     <dependencies>
@@ -22,12 +23,12 @@
             <!--<artifactId>spark-core_2.12</artifactId>-->
             <!--<version>2.4.3</version>-->
         <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.scala-lang</groupId>-->
-            <!--<artifactId>scala-library</artifactId>-->
-            <!--<version>${scala.version}</version>-->
-            <!--<scope>provided</scope>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <version>${scala.version}</version>
+            <scope>compile</scope>
+        </dependency>
         <!--<dependency>-->
         <!--<groupId>org.apache.hadoop</groupId>-->
         <!--<artifactId>hadoop-client</artifactId>-->
